<resources>
    <string name="app_name">Access.md</string>
    <!--  Sign up screen  -->
    <string name="sign_up_first_name">First Name<font color="#FF0000">*</font></string>
    <string name="sign_up_last_name">Last Name<font fgcolor="red">*</font></string>
    <string name="sign_up_phone">Phone<font fgcolor="red">*</font></string>
    <string name="sign_up_password">Password<font fgcolor="red">*</font></string>
    <string name="sign_up_confirm_password">Confirm Password<font fgcolor="red">*</font></string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="error_sign_up">Error while signing up</string>
    <string name="confirm_pass_warning">Password Does\'nt match</string>


    <!--  Sign in screen  -->
    <string name="sign_in_incorrect">Incorrect Email or Password</string>
    <string name="sign_in_password_required">Password field can\'t be empty</string>
    <string name="sign_in_all_fields_required">All fields are required</string>
    <string name="sign_in_phone_required">Phone field can\'t be empty</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="username_phone">Username/Phone</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="sigin_auth_account">You do not have the authorization</string>

    <!--  Main screen  -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_settings">Settings</string>
    <string name="title_menu">Menu</string>
    <string name="title_measurement">Measurement</string>
    <string name="notification_question">You have %1$d new questions from your doctor</string>

    <!--  Home Fragment  -->
    <string name="no_new_questions">No new questions</string>
    <string name="questions">Questions:</string>
    <string name="btn_search">Search</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_measure">Measure</string>
    <string name="btn_answer">Answer</string>
    <string name="select_symptom">Select Symptom</string>

    <!-- General Info Fragment -->
    <string name="general_info_title">General Info</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender<font color="#FF0000">*</font></string>
    <string name="weight">Weight<font color="#FF0000">*</font></string>
    <string name="height">Height<font color="#FF0000">*</font></string>
    <string name="age">Age<font color="#FF0000">*</font></string>
    <string name="next_btn">Next</string>

    <!-- Medication Fragment -->
    <string name="medication_title">Medications</string>
    <string name="medication_subtitle">Please list all of your current medications</string>
    <string name="prev_btn">Previous</string>
    <string name="add_new_medication">Add a new medication</string>
    <string name="add">Add</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Medical Flags -->
    <string name="medical_flags_title">Medical Flags</string>
    <string name="medical_flags_subtitle">Please select all that apply on you.</string>
    <string name="g6pd">G6PD Deficiency</string>
    <string name="respiratory">Respiratory Diseases</string>
    <string name="diabetes">Diabetes </string>
    <string name="cardiovascular">Cardiovascular Diseases</string>
    <string name="obesity">Obesity</string>
    <string name="finish">Finish</string>

    <!--  Add Symptoms Screen   -->
    <string name="add_symptoms_title">What symptoms are you feeling now?</string>
    <string name="btn_submit">Submit</string>
    <string name="notes">Notes</string>

    <!--  Security Code Screen  -->
    <string name="security_code_title">Secret Code</string>

    <!--  Settings Fragment  -->
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>

    <!--  Profile Activity  -->
    <string name="title_sex">Sex</string>
    <string name="title_weight">Weight</string>
    <string name="title_height">Height</string>
    <string name="years_old">Y\'Old</string>

    <!--  Measurement Fragment  -->
    <string name="vital_title">Vital Measurement</string>
    <string name="instructions">- Lightly place your index finger on \n   the rear camera.\n- Make sure the camera is fully \n   covered. \n- Measure in a shaded environment. \n- Don\'t move your finger until the \n   measurement is complete. \n- Finally place your finger then press \n   start. </string>

    <!--  Vitals Result Activity  -->
    <string name="vital_result_title">Vital Measurement Results</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="respiration_rate">Respiration Rate</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="O2_saturation">O2 Saturation</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings Activity -->
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="security">Security</string>
    <string name="language">Language</string>

    <!--  Change Password Activity  -->
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_successfully">Password has been changed successfully</string>

</resources>
